--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/@popperjs/core/dist/umd/popper.min.js"
+              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "./node_modules/d3-scale/dist/d3-scale.min.js",
+              "./node_modules/d3-selection/dist/d3-selection.min.js"
             ]
           },
           "configurations": {
