--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.0.2",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
@@ -18,8 +19,15 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@swimlane/ngx-charts": "^19.1.0",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-shape": "^3.0.2",
     "bootstrap": "^5.1.3",
+    "d3": "^7.1.1",
+    "install": "^0.13.0",
     "jquery": "^3.6.0",
+    "ngx-echarts": "^8.0.0",
+    "npm": "^8.1.4",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "primeicons": "^5.0.0",
