--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,12 @@
             ],
             "styles": [
               "src/styles.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/saga-blue/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              
             ],
             "scripts": [
               "./src/app/components/error-page/error-page-component.js",
