--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "install": "^0.13.0",
     "jquery": "^3.6.0",
     "ngx-echarts": "^8.0.0",
+    "ngx-toastr": "^14.2.1",
     "npm": "^8.1.4",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
@@ -40,6 +41,7 @@
     "@angular-devkit/build-angular": "~13.0.2",
     "@angular/cli": "~13.0.2",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/d3-selection": "^3.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
